<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nick.geocalc.MainActivity">

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/latTwo"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/calc"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/longTwo"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/calc"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/bearing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bearing"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/distance"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/longOne"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/longOne"
        android:inputType="numberSigned"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/latOne"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/latOne"
        android:inputType="numberSigned"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/longTwo"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/longTwo"
        android:inputType="numberSigned"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longOne"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/latTwo"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/latTwo"
        android:inputType="numberSigned"
        app:layout_constraintTop_toBottomOf="@+id/latOne"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:text="Tired of typing?"
        app:layout_constraintRight_toLeftOf="@+id/search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/search"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="SEARCH"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>
